--- a/Samples/WebApi/appsettings.json
+++ b/Samples/WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Critical",
-            "Microsoft.AspNetCore": "None"
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Error"
         }
     }
 }
