--- a/Samples/TreeCalls/appsettings.json
+++ b/Samples/TreeCalls/appsettings.json
@@ -1,7 +1,7 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Error",
+            "Default": "Debug",
             "Microsoft.AspNetCore": "None"
         }
     }
